[gd_scene load_steps=21 format=3 uid="uid://c5cgp6teqp4x8"]

[ext_resource type="Texture2D" uid="uid://f2l53n03eyds" path="res://images/button_0.png" id="1_0jjcd"]
[ext_resource type="Script" path="res://scripts/button.gd" id="1_5rb83"]
[ext_resource type="Texture2D" uid="uid://df15bypmvuasr" path="res://images/button_1.png" id="2_8ovik"]
[ext_resource type="Texture2D" uid="uid://bwp2huib6usat" path="res://images/button_2.png" id="3_qo2e2"]
[ext_resource type="Texture2D" uid="uid://4a3h7sby3dwm" path="res://images/button_3.png" id="4_m4xhy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_weh4b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cxdc1"]
atlas = ExtResource("1_0jjcd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_btdd0"]
atlas = ExtResource("1_0jjcd")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3tya"]
atlas = ExtResource("1_0jjcd")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwfii"]
atlas = ExtResource("2_8ovik")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_prspo"]
atlas = ExtResource("2_8ovik")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujmfv"]
atlas = ExtResource("2_8ovik")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgako"]
atlas = ExtResource("3_qo2e2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dn7pd"]
atlas = ExtResource("3_qo2e2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkesq"]
atlas = ExtResource("3_qo2e2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmach"]
atlas = ExtResource("4_m4xhy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk884"]
atlas = ExtResource("4_m4xhy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgj3r"]
atlas = ExtResource("4_m4xhy")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_0tya6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxdc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btdd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3tya")
}],
"loop": true,
"name": &"level 1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwfii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prspo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujmfv")
}],
"loop": true,
"name": &"level 2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgako")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dn7pd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkesq")
}],
"loop": true,
"name": &"level 3",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmach")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk884")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgj3r")
}],
"loop": true,
"name": &"level 4",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o1d86"]
size = Vector2(64, 64)

[node name="button" type="Button" groups=["button"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -496.0
offset_top = -496.0
offset_right = -432.0
offset_bottom = -432.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
theme_override_styles/focus = SubResource("StyleBoxEmpty_weh4b")
disabled = true
flat = true
icon_alignment = 1
script = ExtResource("1_5rb83")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(32, 32)
sprite_frames = SubResource("SpriteFrames_0tya6")
animation = &"level 1"
autoplay = "level 1"

[node name="AnimatableBody2D" type="Area2D" parent="." groups=["button"]]
position = Vector2(32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D"]
shape = SubResource("RectangleShape2D_o1d86")

[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
